--- a/app/index.html
+++ b/app/index.html
@@ -19,9 +19,6 @@
     </head>
     <body>
         <div class="header"><h1>YO! MATCH IT!</h1>
-      <div id="stats">
-        <div>You've made <span id="clicks">0</span> clicks and found <span id="pairs">0</span> pair(s).</div>
-    </div>
 
     <div id="game">
         <div id="cards">
@@ -30,9 +27,13 @@
                 <div class="face back"></div>
             </div>
         </div>
-        <div style="clear:both"></div>
 
     </div>
+
+    <div id="stats">
+        <div>You've made <span id="clicks">0</span> clicks and found <span id="pairs">0</span> pair(s).</div>
+    </div>
+
     <div id="go-2-nxt-lvl"></div>
 
         <!--[if lt IE 7]>
@@ -44,16 +45,8 @@
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="scripts/vendor/jquery.min.js"><\/script>')</script>
         <script src="scripts/matchgame.js"></script>
-        <script src="scripts/vendor/holder.js"></script>
+        <!--<script src="scripts/vendor/holder.js"></script>-->
         <script src="scripts/flexie.js"></script>
-        
 
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
-            (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-            g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
-            s.parentNode.insertBefore(g,s)}(document,'script'));
-        </script>
     </body>
 </html>
