--- a/app/index.html
+++ b/app/index.html
@@ -14,11 +14,12 @@
 
         
         <link rel="stylesheet" href="styles/matchy.css">
+        <link rel="stylesheet" href="styles/main.css">
 
         <script src="scripts/vendor/modernizr.min.js"></script>
     </head>
     <body>
-        <div class="header"><h1>YO! MATCH IT!</h1>
+        <div class="page-header"><h1>YO! MATCH IT!</h1></div>
 
     <div id="game">
         <div id="cards">
