removed flexie.js req

--- a/app/index.html
+++ b/app/index.html
@@ -49,7 +49,7 @@
         <script>window.jQuery || document.write('<script src="scripts/vendor/jquery.min.js"><\/script>')</script>
         <script src="scripts/matchgame.js"></script>
         <!--<script src="scripts/vendor/holder.js"></script>-->
-        <script src="scripts/flexie.js"></script>
+        <!--<script src="scripts/flexie.js"></script>-->
 
     </body>
 </html>
