--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,8 @@
         <div class="page-header">
           <h1>YO! MATCH IT!</h1>
           <div id="stats">
-              <div>You've made <span id="clicks">0</span> clicks and found <span id="pairs">0</span> pair(s).</div>
+            <div><p class="lead">You've made <span id="clicks">0</span> clicks and found
+              <span id="pairs">0</span> pair(s).</p></div>
           </div>
         </div>
 
@@ -36,7 +37,10 @@
     </div>
 
 
-    <div id="go-2-nxt-lvl"></div>
+    <div id="go-2-nxt-lvl">
+    </div>
+    <div id="passport">
+    </div>
 
         <!--[if lt IE 7]>
             <p class="chromeframe">You are using an outdated browser. <a href="http://browsehappy.com/">Upgrade your browser today</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to better experience this site.</p>
