--- a/app/index.html
+++ b/app/index.html
@@ -26,19 +26,20 @@
           </div>
         </div>
 
-    <div id="game">
-        <div id="cards">
+        <div id="game">
+
+          <div id="cards">
             <div class="card">
                 <div class="face front"></div>
                 <div class="face back"></div>
             </div>
-        </div>
+          </div>
 
-    <div id="passport" class="holderjs">
-    <!--<div id="go-2-nxt-lvl">-->
-    <!--</div>-->
-    </div>
-    </div>
+          <div id="passport" class="holderjs">
+            <div id=
+          </div>
+
+        </div> <!--game -->
 
 
 
